k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://kv-tenkhours-acme-sc4a.vault.azure.net/certificates/tenthousandhours-net
  name: ingress
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: tenthousandhours.net
    http:
      paths:
      - backend:
          service:
            name: frontend-service
            port:
              number: 3000
        path: /
        pathType: Prefix
      - backend:
          service:
            name: backend-service
            port:
              number: 8080
        path: /api/
        pathType: Prefix
  tls:
  - hosts:
    - tenthousandhours.net
    secretName: keyvault-ingress
